--- a/bio.html
+++ b/bio.html
@@ -7,21 +7,29 @@
     <title>Trey</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: rgb(242, 253, 252);">
     <header class="global">
-        <h1 class="test">Trey Schneider</h1>
-        <hr>
+        <div class="main-info">
+            <H1>Software Developer</H1>
+            <H3>Trey Schneider</H3>
+            <p>La Paz, Mexico</p>
+        </div>
+        <nav class="nav-bar">
+            <a href="bio.html" class="a-nav">Bio</a>
+            <a href="contacts.html" class="a-nav">Contact info</a>
+            <a href="projects.html" class="a-nav">projects</a>
+        </nav>
     </header>
     <main>
         
         <br>
-        <h4>About:</h4>
-        <p class="b_bg">I was born and raised in Omaha Nebraska. I was in the navy for four years as a <mark>avionics tech</mark>. After that I got training through Rockwell Automation to be a <mark>automation and controls engineer</mark>. After two years of working for Groupo Bimbo automating their bread lines I quit to learn software development. I've done some work with python, MySQL, CSS, HTML.</p>
+        <h2 style="text-align: center; margin: 2%;">About</h2>
+        <p class="b_bg" style="text-align: center; margin: 0 15% 0 15%;">I was born and raised in Omaha Nebraska. I was in the navy for four years as a <mark>avionics tech</mark>. After that I got training through Rockwell Automation to be a <mark>automation and controls engineer</mark>. After two years of working for Groupo Bimbo automating their bread lines I quit to learn software development. I've done some work with python, MySQL, CSS, HTML.</p>
         <br>
-        <p class="b_bg">In the future I hope to start my own buisness in software development. I want to specialize in making full stack web apps for contracting companies like electricians, plummers, and painters. Because I alredy have a backround in those kinds of career fields I feel I can meet the needs for them a lot easier.</p>
+        <p class="b_bg" style="text-align: center; margin: 0 15% 0 15%;">In the future I hope to start my own buisness in software development. I want to specialize in making full stack web apps for contracting companies like electricians, plummers, and painters. Because I alredy have a backround in those kinds of career fields I feel I can meet the needs for them a lot easier.</p>
         <br>
-        <h4>Things I hope to get out of this program:</h4>
-        <ul class="bio-list">
+        <h2 style="text-align: center; margin: 2%;">Things I hope to get out of this program:</h2>
+        <ul class="bio-list" style="text-align: center; list-style-type: none; margin: 0 15% 0 15%;">
             <li>Learn Javascript</li>
             <li>learn React</li>
             <li>Class based views in Django</li>
